fix(css): z-index of angular image

--- a/_sass/components/angular-image.scss
+++ b/_sass/components/angular-image.scss
@@ -15,7 +15,7 @@
     font-size: 1rem;
     color: map-get($colors, light);
     background: map-get($colors, primary);
-    z-index: 11;
+    z-index: 2;
     position: absolute;
     top: -0.5rem;
     left: 50%;
@@ -40,7 +40,7 @@
       width: 100%;
       height: 100%;
       background-repeat: no-repeat;
-      z-index: 10;
+      z-index: 1;
     }
   }
 
